jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL_LONG1-ending-APOSTROPHE4.shex
# STRING_LITERAL_LONG1 ending with APOSTROPHE4
# source: turtle-syntax-bad-string-07.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ['''abc''''@en]
}
